--- a/public/global.css
+++ b/public/global.css
@@ -9,7 +9,8 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  font-family: 'Lato', sans-serif;
+  font-family: "din-2014", sans-serif;
+  font-size: 10px;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
   margin: 0;
   padding: 0;
   background: #f6f6f6;
+  overflow-y: scroll;
 }
 
 p {
@@ -30,4 +32,8 @@ ol {
 }
 li {
   text-align: left;
+}
+
+#packagebuilderapp {
+  
 }
