--- a/public/global.css
+++ b/public/global.css
@@ -9,7 +9,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  font-family: "din-2014", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 10px;
 }
 
